Fix alignment of language level bars on stats page

--- a/webroot/css/stats/users_languages.css
+++ b/webroot/css/stats/users_languages.css
@@ -42,6 +42,9 @@
 .usersLanguagesLegend .languageLevel .level {
     background-color: #06A;
     height: 100%;
+    font-size: 12px;
+    float: left;
+    position: relative;
 }
 
 .usersLanguagesStats .languageLevel .unknownLevel,
